[package]
name = "nbr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
setjmp = "0.1.4"
nix = "0.26.2"

[dev-dependencies]
crossbeam-utils = "0.8"
rand = "0.8"

[profile.release-with-debug]
inherits = "release"
debug = true